# modern-syslog

./: LICENSE  README.md  modern-syslog.cabal  syslog-simple.cabal
src/Data/: Syslog.hs
src/Data/Syslog/: RFC5424.hs
src/Data/Syslog/RFC5424/: Internal.hs
src/Data/Syslog/RFC5424/Internal/: Compat.hs
src/Data/Syslog/RFC5424/Internal/Time/: Printer.hs
src/System/Syslog/Transport/: Unix.hs
src/System/Syslog/Transport/Unix/: Internal.hs
